syntax = "proto3";

package dev.baaart.rtx.grpc.models.serverstreaming;

option java_multiple_files = true;
option java_package = "dev.baaart.rtx.grpc.models.serverstreaming";
option java_outer_classname = "ServerStreamingProto";

// The greeting service definition.
service ServerStreamingService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
